--- a/Page2.html
+++ b/Page2.html
@@ -18,7 +18,7 @@
         <div><a href="Page4.html"><button class="btn btn-danger btn-lg">Olympians</button></a></div>
     </div>
     <div class="page2">
-        <h1>Prize - winners</h1>
+        <h1>Prize winners</h1>
         <table class="table table-striped table-hover">
             <tr>
                 <th>Saken Bibossinov</th>
